<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="loupe">Лупа</string>
    <string name="note">Квадратная плашка с нотой</string>
    <string name="gear">Шестерёнка</string>
    <string name="arrow_left">Стрелка назад</string>
    <string name="arrow_right">Стрелка вперед</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_icon">Значок поделиться</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="support_icon">Значок лица в наушниках с микрофоном</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_uri">mailto:</string>
    <string name="support_email">worldoftanks14@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="album_art">Обложка альбома</string>
    <string name="ellipse">Кружок</string>
    <string name="error_message">Изображение с ошибкой</string>
    <string name="cross">Крестик</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="didnt_have">Ничего не нашлось</string>
    <string name="looking_for">Вы искали</string>
    <string name="internet_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="play_music">Воспроизвести песню</string>
    <string name="error_play_music">Не удалось воспроизвести песню</string>
    <string name="add_into_favorites">Добавить в мне нравится</string>
    <string name="no_name">Без названия</string>
    <string name="unknown_author">Неизвестный автор</string>
    <string name="unknown">Неизвестно</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="none">none</string>
    <string name="null_preview_url">Демо отсутствует</string>
    <string name="favorite_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="choose_photo_for_playlist">Выбрать фото для плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="create_success">Плейлист создан!</string>
    <string name="playlist_art">Обложка плейлиста</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="wanna_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="editor_icon">Значок редактировать</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete">Удалить</string>
    <string name="save">Cохранить</string>
    <string name="no_tracks_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_have_no_tracks">В этом плейлисте нет треков</string>
</resources>