<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/MainLayout">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="@dimen/margin_main_bt"
        android:layout_marginEnd="@dimen/margin_main_bt">
        <Button
            android:id="@+id/btSearch"
            android:text="@string/search"
            android:contentDescription="@string/loupe"
            style="@style/MainButton"
            app:icon="@drawable/bt_search"/>
        <Button
            android:id="@+id/btMedia"
            android:text="@string/media"
            android:contentDescription="@string/note"
            style="@style/MainButton"
            app:icon="@drawable/bt_media"/>

        <Button
            android:id="@+id/btSettings"
            android:text="@string/settings"
            android:contentDescription="@string/gear"
            style="@style/MainButton"
            app:icon="@drawable/bt_settings" />
    </LinearLayout>
</LinearLayout>