<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <ImageView
            android:id="@+id/btBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/arrow_left"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="@dimen/margin_settings_iv"
            android:src="@drawable/bt_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black_for_text"
            android:textSize="22sp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_layout_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginStart="@dimen/margin_settings_tv"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_layout_height"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginStart="@dimen/margin_settings_tv"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/share_icon"
            android:layout_marginEnd="@dimen/margin_settings_iv"
            android:src="@drawable/share"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_layout_height"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginStart="@dimen/margin_settings_tv"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/support_icon"
            android:layout_marginEnd="@dimen/margin_settings_iv"
            android:src="@drawable/support"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_layout_height"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:layout_marginStart="@dimen/margin_settings_tv"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow_right"
            android:layout_marginEnd="@dimen/margin_settings_iv"
            android:src="@drawable/open"/>
    </LinearLayout>


</LinearLayout>