<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TrackActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_back"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>
    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/arrow_left"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bt_back"/>
    <ImageView
        android:id="@+id/iv_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder_300dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/album_art"
        app:layout_constraintTop_toBottomOf="@id/bt_back"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"/>
    <TextView
        android:id="@+id/tv_track_name"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="24dp"
        style="@style/TextColorBW"
        app:layout_constraintTop_toBottomOf="@+id/iv_album"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Yesterday (Remastered 2009)"/>
    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="12dp"
        style="@style/TextColorBW"
        app:layout_constraintTop_toBottomOf="@+id/tv_track_name"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="The Beatles"/>
    <ImageButton
        android:id="@+id/bt_add_in_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_in_playlist"
        android:background="@color/transparent"
        android:contentDescription="@string/add_in_playlist"
        app:layout_constraintTop_toTopOf="@+id/bt_play"
        app:layout_constraintBottom_toBottomOf="@+id/bt_play"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/bt_play"/>
    <ImageButton
        android:id="@+id/bt_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bt_play"
        android:background="@color/transparent"
        android:contentDescription="@string/play_music"
        app:layout_constraintTop_toBottomOf="@+id/tv_artist_name"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"/>
    <ImageButton
        android:id="@+id/bt_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:background="@color/transparent"
        android:contentDescription="@string/add_into_favorites"
        app:layout_constraintTop_toTopOf="@+id/bt_play"
        app:layout_constraintBottom_toBottomOf="@+id/bt_play"
        app:layout_constraintStart_toEndOf="@+id/bt_play"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"/>
    <TextView
        android:id="@+id/tv_track_time"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginTop="12dp"
        style="@style/TextColorBW"
        app:layout_constraintTop_toBottomOf="@+id/bt_play"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/duration"
        style="@style/TrackInfoLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_track_time"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>
    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="40dp"
        style="@style/TrackInfoRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_track_time"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="5:35"/>
    <TextView
        android:id="@+id/tv_album_hint"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/album"
        style="@style/TrackInfoLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>
    <TextView
        android:id="@+id/tv_album"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        style="@style/TrackInfoRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Yesterday(Remastered 2009)"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/year"
        style="@style/TrackInfoLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_album"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        style="@style/TrackInfoRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_album"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="1965"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre"
        style="@style/TrackInfoLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_year"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>
    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        style="@style/TrackInfoRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_year"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Rock"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        style="@style/TrackInfoLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>
    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        style="@style/TrackInfoRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Великобритания"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
