<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity"
    style="@style/BackgroundWB">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <ImageView
            android:id="@+id/btBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/arrow_left"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="@dimen/margin_settings_iv"
            android:src="@drawable/bt_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            style="@style/TextColorBW"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_et_background">
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            style="@style/SearchEditText"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="14dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/cross"
            style="@style/SearchClearIV"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivErrorSmile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_marginHorizontal="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_message"
            style="@style/SearchErrorSmileIV" />
        <ImageView
            android:id="@+id/ivErrorWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_marginHorizontal="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_message"
            android:visibility="gone"
            style="@style/SearchErrorWiFiIV"/>
        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/didnt_have"
            android:textSize="19sp"
            android:gravity="center"
            style="@style/TextColorBW"/>
        <Button
            android:id="@+id/btRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/refresh"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="54dp"
            style="@style/BackgroundTintBW"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>