<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/new_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:letterSpacing="0"
        app:cornerRadius="54dp"
        style="@style/BackgroundTintBW" />

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_error_smile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginHorizontal="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_message"
            style="@style/SearchErrorSmileIV" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/playlist_empty"
            android:textSize="19sp"
            android:gravity="center"
            style="@style/TextColorBW" />

    </LinearLayout>

</LinearLayout>