<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".media.creator.ui.fragment.CreatorFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_creator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_left"
            android:layout_marginTop="20dp"
            android:src="@drawable/bt_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingHorizontal="16dp"
            style="@style/TextColorBW" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/iv_playlist_background"
        android:src="@drawable/bt_add_photo"
        android:layout_gravity="center"
        android:scaleType="center"
        android:contentDescription="@string/choose_photo_for_playlist"
        app:shapeAppearanceOverlay="@style/RoundedCorners8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_creator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/playlist_name"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintTop_toBottomOf="@id/iv_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cursorColor="@color/blue"
        app:boxStrokeColor="@color/et_creator_background"
        app:hintTextColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_playlist_description"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/playlist_description"
        android:textColorHint="@color/text_color_hint"
        app:layout_constraintTop_toBottomOf="@+id/til_playlist_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cursorColor="@color/blue"
        app:boxStrokeColor="@color/et_creator_background"
        app:hintTextColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/bt_create"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_medium"
        android:background="@drawable/bt_create_background_inactive"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="18dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>