<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trackAdapter"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    style="@style/BackgroundWB">

    <ImageView
        android:id="@+id/ivAlbum"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/album_art" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            style="@style/AdapterTrackName"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="14dp">
            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="50"
                style="@style/AdapterArtistName"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/ellipse"
                style="@style/AdapterEllipse"/>
            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AdapterArtistName"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/open"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="center"
        android:contentDescription="@string/arrow_right"
        style="@style/AdapterOpen"/>
</LinearLayout>